<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".RaspberryActivity">

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40sp"
        android:text="@string/loadingMain"
        android:textColor="@color/mainText"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/deviceRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="20sp"
        android:text="@string/loadingSecondary"
        android:textColor="@color/secondaryText"

        android:textSize="18sp" />


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/downloadCard"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceRoom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#1A1A1A">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/downloadSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50sp"
                android:paddingVertical="10sp"
                android:text="5.4"
                android:textColor="@color/mainText"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="-40dp"
                android:layout_toRightOf="@id/downloadSpeed"
                android:paddingVertical="15sp"
                android:text="Mb/s"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="14sp"
                android:text="@string/download_speed"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

        </RelativeLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/uploadCard"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/downloadCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#1A1A1A"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/uploadSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50sp"
                android:paddingVertical="10sp"
                android:text="4.4"
                android:textColor="@color/mainText"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="-40dp"
                android:layout_toRightOf="@id/uploadSpeed"
                android:paddingVertical="15sp"
                android:text="Mb/s"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="35sp"
                android:layout_marginLeft="35sp"
                android:text="@string/upload_speed"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />
        </RelativeLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/pingCard"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#1A1A1A"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50sp"
                android:paddingVertical="10sp"
                android:text="3"
                android:textColor="@color/mainText"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="-45sp"
                android:layout_toRightOf="@id/ping"
                android:paddingVertical="15sp"
                android:text="ms"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="110sp"
                android:text="@string/ping"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />
        </RelativeLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="100sp"

        android:layout_marginBottom="100sp"
        android:text="@string/loadingSecondary"
        android:textColor="@color/secondaryText"
        android:textSize="18sp" />

</RelativeLayout>